--- a/Syayida Nuraziza_ZIP.html
+++ b/Syayida Nuraziza_ZIP.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
-    <link rel="icon" type="x-icon" href="diamond-logo.ico">
+    <link rel="icon" type="image/x-icon" href="diamond-logo.ico">
     <link rel="stylesheet" href="untitled.css">
     <title>Alexandria Islamic School</title>
 
@@ -20,7 +20,7 @@
     <nav class="navbar">
 
         <a href="#" class="navbar-logo"><div class="logo">
-        <img src="diamond-logo.ico" alt="logo"><a href="#home">Alexandria Islamic School</a>
+        <img src="images/diamond-logo.ico" alt="logo"><a href="#home">Alexandria Islamic School</a>
 
         <div class="navbar-nav">
             <a href="#">Home</a>
@@ -56,7 +56,7 @@
       <h1>Alexandria Islamic School</h1>
     </div>
     <div id="sekolah">
-      <img src="alexandria.jpg">
+      <img src="images/alexandria.jpg">
     </div>
 
     <div class="content">
